--- a/css/styles.css
+++ b/css/styles.css
@@ -12,9 +12,17 @@
 
 */
 
+* {
+  font-family: 'Fira Code';
+}
 
+.ascii-art {
+  white-space: pre;
+  color: #b05279
+}
 
 body {
+  
   background-color: #2e2e2e;
   margin-left: 15%;
   margin-right: 20%;
