--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,22 @@
 /* 
+Palette 	Hex 	RGB 	HSL 	Color Picker Boxes
+Background 	#242424 	36 36 36 	0, 0%, 14% 	Background Color
+Current Line 	#3D3D3D 	61, 61, 61 	0, 0%, 24% 	Current Line Color
+Selection 	#403d3d 	64, 61, 61 	0, 5%, 25% 	Selection Color
+Comment 	#8C8C8C 	140, 140, 140 	0, 0%, 55% 	Comment Color
+Foreground 	#F8F8F2 	248, 248, 242 	60, 2%, 96% 	Foreground Color
+String 	#FFEE99 	255, 238, 153 	50, 40%, 80% 	String Color
+Number 	#FF80F4 	255, 128, 244 	305, 50%, 75% 	Number Color
+Thunderbird 	#D3201F 	211, 32, 31 	30, 85%, 47% 	Thunderbird Color
+Radical Red 	#F92672 	249, 38, 114 	338, 85%, 56% 	Radical Red Color
+Fuchsia Pink 	#CD5AC5 	205, 90, 197 	304, 56%, 58% 	Fuchsia Pink Color
+Lavender Rose 	#FFB2F9 	255, 178, 249 	305, 30%, 85% 	Lavender Rose Color
+Tree Poppy 	#FD971F 	253, 151, 31 	32, 88%, 56% 	Tree Poppy Color
+Atlantis 	#60cf30 	96, 207, 48 	102, 77%, 50% 	Atlantis Color
+Pear 	#A6E22E 	166, 226, 46 	80, 80%, 53% 	Pear Color
+Spray 	#66D9EF 	102, 217, 239 	190, 57%, 67% 	Spray Color
+Malibu 	#90E7F7 	144, 231, 247 	189, 42%, 77% 	Malibu Color
 
-    Background: (46, 46, 46); #2e2e2e
-    Comments: (121, 121, 121); #797979
-    White: (214, 214, 214); #d6d6d6
-    Yellow: (229, 181, 103); #e5b567
-    Green: (180, 210, 115); #b4d273
-    Orange: (232, 125, 62); #e87d3e
-    Purple: (158, 134, 200); #9e86c8
-    Pink: (176, 82, 121); #b05279
-    Blue: (108, 153, 187); #6c99bb
 
 */
 
@@ -17,13 +25,25 @@
 }
 
 .ascii-art {
+  margin-left: 0%;
+  margin-right:0%;
+  text-align: center;
   white-space: pre;
-  color: #b05279
+  color: 		#F92672  
 }
+
+.boxing {
+  padding: 5% ;
+  border-radius: 13px;
+  border-width:3px;
+  border-style: dotted ;
+  border-color: #fff;
+}
+
 
 body {
   
-  background-color: #2e2e2e;
+  background-color: #242424;
   margin-left: 15%;
   margin-right: 20%;
 }
@@ -32,7 +52,7 @@ p {
 }
 
 h1 {
-  color: #b05279
+  color: 	#FD971F  
 }
 
 h2 {
@@ -44,8 +64,8 @@ h3 {
 }
 
 a:link {
-  color: #e5b567;
+  color: #ffee99;
 }
 a:visited {
-  color: #e5b567;
+  color: #ffee99;
 }
